Deployment/kotak_deploy/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uat-frontend
  labels:
    app: uat-frontend
    type: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uat-frontend
  template:
    metadata:
      name: uat-frontend
      labels:
        app: uat-frontend
        type: web
    spec:
      # tolerations:
      # - key: "app"
      #   operator: "Equal"
      #   value: "web"
      #   effect: "NoSchedule"
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: app
      #           operator: In
      #           values:
      #           - web
      containers:
        - image: "979213225527.dkr.ecr.ap-south-1.amazonaws.com/uat-frontend:latest"
          name: uat-frontend
          resources:
            requests:
              memory: "2Gi"
            limits:
              memory: "4Gi"
          ports:
            - name: live-port
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: live-port
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: live-port
            initialDelaySeconds: 60
            periodSeconds: 10
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: uat-frontend
spec:
  selector:
    app: uat-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: live-port
---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: uat-frontend
#   annotations:
#     kubernetes.io/ingress.class: azure/application-gateway
#     #appgw.ingress.kubernetes.io/ssl-redirect: "true"
#     #appgw.ingress.kubernetes.io/appgw-ssl-certificate: "devdrp.tekion.xyz"
# spec:
#   #tls:
#   #  - hosts:
#   #      - drpdev.tekion.xyz
#   rules:
#   #  - host: drpdev.tekion.xyz
#     - http:
#         paths:
#           - path: /
#             backend:
#               serviceName: uat-frontend
#               servicePort: 80
