Deployment/kotak_deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  # namespace: frontend-ingress
  name: frontend-ingress-alb
  labels:
    app: uat-frontend
    type: web
  annotations:
    # kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/certificate-arn: <cert-arn>
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/group.name: uat-frontend
    alb.ingress.kubernetes.io/target-type: ip
    #kubernetes.io/role/elb: 1
    #alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
         - path: /*
           backend:
             serviceName: uat-frontend
             servicePort: 80
